dev/networkpolicy/ns3.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev3

---
apiVersion: v1
kind: Pod
metadata:
  name: devapp3
  namespace: dev3
spec:
  containers:
  - name: devcon3
    image: sudarshanlnx/neptune1:v1
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
      name: apache
      protocol: TCP
    resources:
      requests:
        memory: "300Mi"
        cpu: "200m"
      limits:
         memory: "400Mi"
         cpu: "400m"
