dev/networkpolicy/04_NwAllowPod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-namespace
  namespace: dev1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: devpod2
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: dev2
    ports:
    - port: 80
      protocol: TCP
